ubiquity (2.7.17) UNRELEASED; urgency=low

  [ Evan Dandrea ]
  * Make sure the webcam module is built before running tests.

  [ Colin Watson ]
  * Use a stamp file for 'debian/rules install' to try to avoid duplicate
    runs (e.g. when repeatedly running tests).
  * Mark the debian/rules tests target as phony, to allow repeated runs more
    easily.

 -- Evan Dandrea <ev@ubuntu.com>  Wed, 24 Aug 2011 14:35:09 +0100

ubiquity (2.7.16) oneiric; urgency=low

  [ Colin Watson ]
  * Update translations from Launchpad.
  * Enable code in console-setup 1.57ubuntu24 to fix default keyboard
    selection for language/country combinations lacking a proper combined
    locale (LP: #814448).
  * Rename libwebcam to libubiwebcam to avoid clashing with the existing
    libwebcam0 package.

  [ Evan Dandrea ]
  * Move noninteractive frontend to PyGI bindings for GObject (LP:
    #829186).
  * Make the webcam page match its specified design.
  * Automatic update of included source packages: console-setup
    1.57ubuntu25.

  [ Jeremy Bicha ]
  * Allow users to enter their own mount point in the partitoner (LP: #831431)

 -- Evan Dandrea <ev@ubuntu.com>  Wed, 24 Aug 2011 13:58:08 +0100

ubiquity (2.7.15) oneiric; urgency=low

  [ Colin Watson ]
  * Remove dead code from debian/oem-config.oem-config.upstart.
  * Prefer recent versions of ntfs-3g to ntfsprogs, as ntfsresize has moved
    to ntfs-3g.

  [ Evan Dandrea ]
  * Change the first partitioning page title to 'Installation Type.'
    Thanks Matthew Paul Thomas.
  * Merge PyGI branch. Ubiquity now uses PyGI and GTK+3.
  * Feature Freeze exception (LP: #825274).
  * Automatic update of included source packages: base-installer
    1.119ubuntu4, console-setup 1.57ubuntu23, flash-kernel 2.28ubuntu28,
    netcfg 1.68ubuntu1, partman-auto-loop 0ubuntu20, partman-
    basicfilesystems 71ubuntu1, partman-efi 24ubuntu2, partman-
    partitioning 81ubuntu2, tzsetup 1:0.26ubuntu10, user-setup
    1.28ubuntu18.

  [ Brian Murray ]